CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/Producto_de_Seguros__c.object-meta.xml
<CustomObject>
    <label>Producto de Seguro</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de Seguro</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>