CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/fields/Codigo_de_Producto_nectia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto_nectia__c</fullName>
    <externalId>true</externalId>
    <label>Codigo Operacional</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>