CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>APV</fullName>
            </value>
            <value>
                <fullName>Fondos Mutuos</fullName>
            </value>
            <value>
                <fullName>INVALIDEZ</fullName>
                <label>Invalidez</label>
            </value>
            <value>
                <fullName>Inversión GOLD</fullName>
            </value>
            <value>
                <fullName>Renta Privada</fullName>
            </value>
            <value>
                <fullName>Renta Privada Sobrevivencia</fullName>
            </value>
            <value>
                <fullName>Renta Privada Vejez</fullName>
            </value>
            <value>
                <fullName>Renta Vitalicia Invalidez</fullName>
            </value>
            <value>
                <fullName>Renta Vitalicia Sobrevivencia</fullName>
            </value>
            <value>
                <fullName>Renta Vitalicia Vejez</fullName>
            </value>
            <value>
                <fullName>Renta Vitalicia Vejez Anticipada</fullName>
            </value>
            <value>
                <fullName>Responsabilidad Civil</fullName>
            </value>
            <value>
                <fullName>Seguro Accidentes</fullName>
            </value>
            <value>
                <fullName>Seguro con Ahorro</fullName>
            </value>
            <value>
                <fullName>Seguro Desgravamen</fullName>
            </value>
            <value>
                <fullName>Seguro Dotal con Ahorro</fullName>
            </value>
            <value>
                <fullName>Seguro Educacional</fullName>
            </value>
            <value>
                <fullName>Seguro Fidelidad</fullName>
            </value>
            <value>
                <fullName>Seguro Flexible con Ahorro</fullName>
            </value>
            <value>
                <fullName>Seguro Hogar</fullName>
            </value>
            <value>
                <fullName>Seguro Incendio</fullName>
            </value>
            <value>
                <fullName>Seguro Incendio Comercial</fullName>
            </value>
            <value>
                <fullName>Seguro Incendio Condominios</fullName>
            </value>
            <value>
                <fullName>Seguro L. Comerciales</fullName>
            </value>
            <value>
                <fullName>Seguro Maquinaria</fullName>
            </value>
            <value>
                <fullName>Seguro Mascotas</fullName>
            </value>
            <value>
                <fullName>Seguro Patrimonial</fullName>
            </value>
            <value>
                <fullName>Seguro Salud</fullName>
            </value>
            <value>
                <fullName>Seguros Colectivos Desgravamen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>