CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/fields/L_nea__c.field-meta.xml
<CustomField>
    <fullName>L_nea__c</fullName>
    <label>Línea</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colectivos</fullName>
            </value>
            <value>
                <fullName>FFMM</fullName>
            </value>
            <value>
                <fullName>Generales</fullName>
            </value>
            <value>
                <fullName>Rentas Vitalicias</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>