CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/fields/Tipo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nectia__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area_Nectia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Full</fullName>
            </value>
            <value>
                <fullName>Auto Flex</fullName>
            </value>
            <value>
                <fullName>Auto Light</fullName>
            </value>
            <value>
                <fullName>Pérdida Total + Responsabilidad Civil</fullName>
            </value>
            <value>
                <fullName>Responsabilidad Civil</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>SOAPEX -Seguro Obligatorio Extranjero</fullName>
            </value>
            <value>
                <fullName>Vehículos Pesados</fullName>
            </value>
            <value>
                <fullName>Hogar Total</fullName>
            </value>
            <value>
                <fullName>Hogar Contenido</fullName>
            </value>
            <value>
                <fullName>VidAhorro Flex</fullName>
            </value>
            <value>
                <fullName>VidAhorro 100</fullName>
            </value>
            <value>
                <fullName>Vida Futura</fullName>
            </value>
            <value>
                <fullName>Protección Activa</fullName>
            </value>
            <value>
                <fullName>Seguro Oncológico</fullName>
            </value>
            <value>
                <fullName>Accidentes Personales</fullName>
            </value>
            <value>
                <fullName>Seguro Deporte</fullName>
            </value>
            <value>
                <fullName>Seguro Viaje</fullName>
            </value>
            <value>
                <fullName>Mascota Protegida</fullName>
            </value>
            <value>
                <fullName>Responsabilidad Civil Múltiple</fullName>
            </value>
            <value>
                <fullName>Empresas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>