CNSDEVCOLECT/force-app/main/default/objects/Producto_de_Seguros__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area_Nectia__c</columns>
    <columns>L_nea__c</columns>
    <columns>Familia__c</columns>
    <columns>Estado_Nectia__c</columns>
    <columns>Codigo_de_Producto_nectia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>